--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,38 +5,12 @@
         <ion-icon name='menu'></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title class="open-task" (click)="scrollToTop()">Registry</ion-title>
+    <ion-title class="open-task" (click)="scrollToTop()">New Mom Care Plan</ion-title>
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
   </ion-navbar>
 </ion-header>
-
-<!-- <ion-menu [content]="mycontent" type="overlay">
-  <ion-header>
-    <ion-title>
-      Categories
-    </ion-title>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item (click)="navToSchedule('Schedule')">
-        Schedule
-      </button>
-      <button ion-item (click)="navToSchedule('Service')">
-        Service Provider
-      </button>
-      <button ion-item (click)="navToSchedule('Gifts')">
-        Gifts
-      </button>
-      <button ion-item (click)="navToSchedule('Logout')">
-        Logout
-      </button>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-
-<ion-nav #mycontent [root]="rootPage"></ion-nav> -->
 
 <ion-content padding>
 	  <ion-fab top right edge *ngIf ="IsMother">
@@ -47,7 +21,7 @@
     </ion-fab>
 	<ion-list>
 		<ion-card *ngFor="let task of tasks | async" (click)="taskTapped(task)">
-      <div class ="{{task.t_category}}">
+      <div class ="{{task.category}}">
 			 <ion-item *ngIf="task.taken == 0">
 			   <ion-label>{{task.name}}</ion-label>
 			 </ion-item>
