--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -23,7 +23,8 @@
   <ion-item>
     <ion-icon name="calendar" item-start></ion-icon>
     <ion-label>Date</ion-label>
-    <ion-datetime displayFormat="MMM DD, YYYY" pickerFormat="MMMM DD, YYYY" max="2050" [(ngModel)]="currDate"></ion-datetime>
+    <ion-datetime displayFormat="MMM DD, YYYY" pickerFormat="MMMM DD, YYYY" max="2050" [(ngModel)]="currDate">
+    </ion-datetime>
   </ion-item>
 
   <div id="btn-holder">
