added 3 new blank pages as requested by client

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -26,16 +26,13 @@
 
             <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Password</ion-label>
-              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "details.password" required></ion-input>b
+              <ion-input type="text" name="password" placeholder="Password" [(ngModel)] = "details.password" required></ion-input>b
             </ion-item>
 
-	    <ion-item class="reg-field">
+	           <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Village ID</ion-label>
-              <ion-input type="text" name="Password" placeholder="Password" [(ngModel)] = "villageID" required></ion-input>b
+              <ion-input type="text" name="villageID" placeholder="Village ID" [(ngModel)] = "villageID" required></ion-input>b
             </ion-item>
-
-
-
            </ion-list>
 	</ion-col>
       </ion-row>
