--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,12 +13,12 @@
 </ion-header>
 
 <ion-content padding>
-	  <ion-fab top right edge *ngIf ="IsMother">
+	  <!-- <ion-fab top right edge *ngIf ="IsMother">
    		<button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
  	  </ion-fab>
     <ion-fab top right edge *ngIf ="IsVillager">
       <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
-    </ion-fab>
+    </ion-fab> -->
 	<ion-list>
 		<ion-card *ngFor="let task of tasks | async" (click)="taskTapped(task)">
       <div class ="{{task.category}}">
