Added last name to registration and stores it in IonicAuth.

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -19,6 +19,11 @@
               <ion-input type="text" name="firstName" placeholder="Willie" [(ngModel)] = "name" required></ion-input>
             </ion-item>
 
+            <ion-item class="reg-field">
+              <ion-label fixed class="reg-form-label required">Last Name</ion-label>
+              <ion-input type="text" name="lastName" placeholder="Willson" [(ngModel)] = "lastName" required></ion-input>
+            </ion-item>
+	    
              <ion-item class="reg-field">
               <ion-label fixed class="reg-form-label required">Email</ion-label>
               <ion-input type="text" name="email" placeholder="WillieCat2017@u.northwestern.edu" [(ngModel)] = "details.email" required></ion-input>
