cleaned up and improved settings page

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -20,8 +20,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>Add Request</h1>
-  <h1>Do Not Disturb Times</h1>
-  <h1>Outstanding Village Sign Ups</h1>
-  <p (click)="sayMyName()">Tell console to say my name.</p>
+  <h3>Add Request</h3>
+  <h3>Do Not Disturb Times</h3>
+  <h3>Outstanding Village Sign Ups</h3>
+  <!-- <p (click)="sayMyName()">Tell console to say my name.</p> -->
 </ion-content>
