Hi username implemented in settings page

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,7 +11,7 @@
         <ion-icon name='menu'></ion-icon>
       </button> -->
     </ion-buttons>
-    Hi {{username}}!
+    <h3>Hi {{username}}!</h3>
     <ion-title class="open-item">Settings</ion-title>
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
