Can see villageIDsymbol on setings page

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -23,5 +23,6 @@
   <h1>Add Request</h1>
   <h1>Do Not Disturb Times</h1>
   <h1>Outstanding Village Sign Ups</h1>
+  <h1>VillageID: {{villageSymbol}}</h1>
   <p (click)="sayMyName()">Tell console to say my name.</p>
 </ion-content>
