VillageID no longer required and fixed new village bug

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -35,8 +35,8 @@
             </ion-item>
 
 	    <ion-item class="reg-field">
-              <ion-label fixed class="reg-form-label required">Village ID</ion-label>
-              <ion-input type="text" name="villageID" placeholder="Village ID" [(ngModel)] = "villageID" required></ion-input>b
+              <ion-label fixed class="reg-form-label">Village ID</ion-label>
+              <ion-input type="text" name="villageID" placeholder="Village ID" [(ngModel)] = "villageID"></ion-input>b
             </ion-item>
 
 	    <ion-item class="reg-field">
