--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -27,7 +27,9 @@
   <ion-list>
     <ion-card *ngFor="let task of takenTasks | async">
       This is a task!
-      {{task.t_taken_id}}
+      {{task.t_taken_id}},
+      {{task.name}},
+      {{task.category}}
     </ion-card>
   </ion-list>
       <!-- <p (click)="sayMyName()">Tell console to say my name.</p> -->
