added time/date to carepage, but not correct format atm

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,10 +25,10 @@
 			 <ion-item *ngIf="task.taken == 0">
 			   <ion-label>{{task.name}}
            <p>
-             Time / Date: {{task.date}}
+             Time / Date: {{task.datetime}}
            </p>
            <p>
-             Description: {{task.details}}
+             Description: {{task.category}}
            </p>
          </ion-label>
 			 </ion-item>
