added description to tasks in schedule tab

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -54,7 +54,7 @@
         <button ion-item (click)="taskTapped(task)">
           <h3>{{task.name}}</h3>
           <p>
-            Description &mdash;
+            Description: {{task.category}}
           </p>
         </button>
       </ion-item-sliding>
