--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -55,7 +55,7 @@
           <h3>{{task.name}}</h3>
           <p>
             {{task.name}} &mdash;
-            {{task.datetime}} &mdash;
+            {{task.clockTime}} &mdash;
             {{task.taken}}
           </p>
         </button>
