--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -54,9 +54,7 @@
         <button ion-item (click)="taskTapped(task)">
           <h3>{{task.name}}</h3>
           <p>
-            {{task.name}} &mdash;
-            {{task.clockTime}} &mdash;
-            {{task.taken}}
+            Time: {{task.clockTime}} &mdash;
           </p>
         </button>
       </ion-item-sliding>
