--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,7 +25,7 @@
 			 <ion-item *ngIf="task.taken == 0">
 			   <ion-label>{{task.name}}
            <p>
-             Time / Date: {{task.clockTime}}
+             Time: {{task.clockTime}}
            </p>
            <p>
              Description: {{task.category}}
