--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,9 @@
 </ion-header>
 
 <ion-content padding>
+  <p class="title">
+  Available Tasks:
+  </p>
 	  <!-- <ion-fab top right edge *ngIf ="IsMother">
    		<button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
  	  </ion-fab>
@@ -23,13 +26,10 @@
 		<ion-card *ngIf="task.taken == 0" (click)="taskTapped(task)">
       <div class ="{{task.category}}">
 			 <ion-item >
-			   <ion-label>{{task.name}}
-           <p>
-             Time: {{task.clockTime}}
-           </p>
-           <p>
-             Description: {{task.category}}
-           </p>
+			   <ion-label>
+           <h3 class="task_title">{{task.name}}</h3>
+           <p>Time: {{task.clockTime}}</p>
+           <p>Description: {{task.category}}</p>
          </ion-label>
 			 </ion-item>
       </div>
