--- a/src/pages/gifts/gifts.html
+++ b/src/pages/gifts/gifts.html
@@ -13,4 +13,40 @@
 </ion-header>
 
 <ion-content padding>
+  <img src="assets/img/gourmet_meal.jpg">
+ <p>Gift a meal to their favorite restaurant
+   from 55.00 </p>
+ <img src="assets/img/raw+ingredients+groceries+cooking.jpg">
+ <p>Gift a week of Blue Apron
+   $65.00 </p>
+  <img src="assets/img/lactation_consult.jpg">
+ <p>Sign up to join a Virtual New Moms Group (0-6 mo post pregnancy)
+   $160.00</p>
+  <img src="assets/img/StockSnap_VF51PE5SCF.jpg">
+ <p>Contribute toward a cleaning service
+   from 55.00</p>
+  <img src="assets/img/Babysitter.jpg">
+ <p>Contribute toward a babysitter
+   from 55.00</p>
+  <img src="assets/img/Night+nurse.jpg">
+ <p>Contribute toward a night nurse
+   from 55.00</p>
+  <img src="assets/img/love-romantic-bath-candlelight.jpg">
+ <p>Contribute toward a spa day
+   from 55.00</p>
+  <img src="assets/img/lactation.jpg">
+ <p>Contribute toward a lactation consultant
+   from 105.00</p>
+  <img src="assets/img/babysitting-edited.jpg">
+ <p>Volunteer to babysit
+   $0.00 </p>
+  <img src="assets/img/friend+play+date.jpg">
+ <p>Schedule a friend date
+   $0.00</p>
+  <img src="assets/img/fresh+aroma+therapy.jpg">
+ <p>Mommy Care Package: Pain Relief and Pick-Me-Up Kit
+   $50.00</p>
+  <img src="assets/img/Idea.jpg">
+ <p>Don't see what you want listed?
+   $0.00</p>
 </ion-content>
