--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -24,13 +24,21 @@
   <h6>Do Not Disturb Times</h6>
   <h6>Outstanding Village Sign Ups</h6>
   <h6>VillageID: {{villageSymbol}}</h6>
-  <ion-list>
-    <ion-card *ngFor="let task of takenTasks | async">
-      This is a task!
-      {{task.t_taken_id}},
-      {{task.name}},
-      {{task.category}}
+
+  <p class="title">
+  Taken Tasks:
+  </p>
+  <ion-list *ngFor="let task of takenTasks | async">
+    <ion-card>
+      <div class ="{{task.category}}">
+	<ion-item >
+	  <ion-label>
+	    <h3 class="task_title">{{task.name}}</h3>
+	    <p>Time: {{task.clockTime}}</p>
+	    <p>Description: {{task.category}}</p>
+	  </ion-label>
+	</ion-item>
+      </div>
     </ion-card>
-  </ion-list>
-      <!-- <p (click)="sayMyName()">Tell console to say my name.</p> -->
+  </ion-list>  
 </ion-content>
