--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -20,6 +20,7 @@
 </ion-header>
 
 <ion-content>
+  <button ion-button block (click)="chooseDate()">Choose Date</button>
   <ion-item>
     <ion-icon name="calendar" item-start></ion-icon>
     <ion-label>Date</ion-label>
