added add task button

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -81,8 +81,8 @@
 		</ion-card>
 	</ion-list>
 
-  <p class = "bottom" text-center>
-  <button class = "bottom" ion-button round outline (click)="openModal()">Add Task</button>
-</p>
+  <!-- <p class = "bottom" text-center> -->
+  <button ion-button round outline (click)="openModal()">Add Task</button>
+  <!-- </p> -->
 
 </ion-content>
