fixed logo on mommypage

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
         Spend Money
       </ion-segment-button>
     </ion-segment>
-    <ion-title class="open-task" (click)="scrollToTop()">New Mom Care Plan</ion-title>
+    <ion-title class="open-task" (click)="scrollToTop()"></ion-title>
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
