fixed navigation and added active highlight to selected page

--- a/src/pages/gifts/gifts.html
+++ b/src/pages/gifts/gifts.html
@@ -2,7 +2,7 @@
   <ion-navbar align-title="center">
     <ion-buttons left>
       <button ion-button menuToggle icon-only>
-        <!-- <ion-icon name='menu'></ion-icon> -->
+        <ion-icon name='menu'></ion-icon>
       </button>
     </ion-buttons>
     <ion-segment [(ngModel)]="segment">
@@ -24,7 +24,7 @@
 
   <img src="assets/img/gourmet_meal.jpg">
  <p>Gift a meal to their favorite restaurant
-   from 55.00 </p>
+   from $55.00 </p>
  <img src="assets/img/raw+ingredients+groceries+cooking.jpg">
  <p>Gift a week of Blue Apron
    $65.00 </p>
@@ -33,19 +33,19 @@
    $160.00</p>
   <img src="assets/img/StockSnap_VF51PE5SCF.jpg">
  <p>Contribute toward a cleaning service
-   from 55.00</p>
+   from $55.00</p>
   <img src="assets/img/Babysitter.jpg">
  <p>Contribute toward a babysitter
-   from 55.00</p>
+   from $55.00</p>
   <img src="assets/img/Night+nurse.jpg">
  <p>Contribute toward a night nurse
-   from 55.00</p>
+   from $55.00</p>
   <img src="assets/img/love-romantic-bath-candlelight.jpg">
  <p>Contribute toward a spa day
-   from 55.00</p>
+   from $55.00</p>
   <img src="assets/img/lactation.jpg">
  <p>Contribute toward a lactation consultant
-   from 105.00</p>
+   from $105.00</p>
   <img src="assets/img/babysitting-edited.jpg">
  <p>Volunteer to babysit
    $0.00 </p>
