--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-navbar no-border-bottom align-title="center">
     <ion-buttons left>
-      <!-- <button ion-button menuToggle icon-only>
+      <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
-      </button> -->
+      </button>
     </ion-buttons>
     <ion-segment [(ngModel)]="segment">
       <ion-segment-button value="alltasks" (click)="taskTaken(2)">
