tabs show up on all pages now, but the actual sidemenu pages are not loading properly

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar class="login-navbar">
     <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
@@ -37,7 +37,7 @@
   <div class="register-box">
     <ion-row>
       <ion-col>
-        <p (click)="createAccount()">New to MyVillage? Sign up now.</p>
+        <p (click)="createAccount()">New to myVillage? Sign up now.</p>
       </ion-col>
     </ion-row>
     <ion-row>
