--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Registry" tabIcon="list-box"></ion-tab>
+<ion-tabs [selectedIndex]="mySelectedIndex">
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]='tab2Root' tabTitle="Settings" tabIcon="cog"></ion-tab>
 </ion-tabs>
