reverting to nav push & pop for switching between side menus temporarily so that it is working

--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -6,10 +6,10 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-toolbar>
     <!-- <ion-title>Welcome to MyVillage</ion-title> -->
     <img id="header-logo" src="assets/img/myVillageLogo.jpg">
-  </ion-navbar>
+  </ion-toolbar>
 
 </ion-header>
 <ion-content>
