--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar no-border-bottom align-title="center">
+  <ion-toolbar no-border-bottom align-title="center">
     <ion-buttons left>
       <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
@@ -16,7 +16,7 @@
         Untaken Tasks
       </ion-segment-button>
     </ion-segment>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 <!-- <<<<<<< Updated upstream
@@ -30,9 +30,6 @@
       <ion-datetime class="date" displayFormat="MMM DD, YYYY" pickerFormat="MMMM DD, YYYY" max="2050" [(ngModel)]="currDate">
       </ion-datetime>
   </ion-item>
-
-  <button ion-button block outline small (click)="chooseDate()">Choose Date</button>
-
 <br />
   <div id="btn-holder">
     <button ion-button small class="day-btn" [ngClass]="{'active': currDay==0}"  (click)="changeDay(0)">Su</button>
