--- a/src/pages/service-providers/service-providers.html
+++ b/src/pages/service-providers/service-providers.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar align-title="center">
+  <ion-toolbar align-title="center">
     <ion-buttons left>
       <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
@@ -15,8 +15,9 @@
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
+  
 </ion-content>
