--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -49,7 +49,7 @@
         </p>
       </ion-item-divider>
       <ion-item-sliding #slidingItem *ngFor="let task of tasks | async">
-        <button ion-item (click)="taskTapped(task)">
+        <button ion-item (click)="taskTapped(task)" *ngIf="task.taken == taken || taken == 2"> <!-- do not remove *ngIf without first consulting GitIssue #18-->
           <h3>{{task.name}}</h3>
           <p>
             Time: {{task.clockTime}}
@@ -57,13 +57,13 @@
         </button>
       </ion-item-sliding>
     </ion-card>
-		<ion-card *ngFor="let hour of daySched | async">
+    <ion-card *ngFor="let hour of daySched | async">
       <ion-item-divider sticky>
         <ion-label>
           {{hour.time}}
         </ion-label>
       </ion-item-divider>
-			<ion-item-sliding #slidingItem>
+      <ion-item-sliding #slidingItem>
         <button ion-item (click)="goToSessionDetail(session)">
           <h3>Description</h3>
           <p>
@@ -71,9 +71,9 @@
             John Doe has taken this task!
           </p>
         </button>
-			</ion-item-sliding>
-		</ion-card>
-	</ion-list>
+      </ion-item-sliding>
+    </ion-card>
+  </ion-list>
 
   <!-- <p class = "bottom" text-center> -->
   <button ion-button round outline (click)="openModal()">Add Task</button>
