adding menu toggle to pages; changing navbar to toolbar

--- a/src/pages/faqs/faqs.html
+++ b/src/pages/faqs/faqs.html
@@ -5,17 +5,17 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar align-title="center">
-    <!-- <ion-buttons left>
+  <ion-toolbar align-title="center">
+    <ion-buttons left>
       <button ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
       </button>
-    </ion-buttons> -->
+    </ion-buttons>
     <ion-title class="open-task">FAQs</ion-title>
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
