comments home page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -91,3 +91,47 @@ Available Tasks
   <ion-fab top right edge *ngIf ="IsVillager">
     <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
   </ion-fab> -->
+
+  <!--  Discard this stuff -->
+<!-- <p class="title">
+Available Tasks
+</p> -->
+  <!-- <ion-fab top right edge *ngIf ="IsMother">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab>
+  <ion-fab top right edge *ngIf ="IsVillager">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab> -->
+
+  <!--  Discard this stuff -->
+<!-- <p class="title">
+Available Tasks
+</p> -->
+  <!-- <ion-fab top right edge *ngIf ="IsMother">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab>
+  <ion-fab top right edge *ngIf ="IsVillager">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab> -->
+
+  <!--  Discard this stuff -->
+<!-- <p class="title">
+Available Tasks
+</p> -->
+  <!-- <ion-fab top right edge *ngIf ="IsMother">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab>
+  <ion-fab top right edge *ngIf ="IsVillager">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab> -->
+
+  <!--  Discard this stuff -->
+<!-- <p class="title">
+Available Tasks
+</p> -->
+  <!-- <ion-fab top right edge *ngIf ="IsMother">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab>
+  <ion-fab top right edge *ngIf ="IsVillager">
+    <button ion-fab (click)="addTask()"><ion-icon ios="ios-add" md="md-add"></ion-icon></button>
+  </ion-fab> -->
