FAQ page completed

--- a/src/pages/faqs/faqs.html
+++ b/src/pages/faqs/faqs.html
@@ -19,4 +19,30 @@
 </ion-header>
 
 <ion-content padding>
+<ul>
+  <li>
+Can you accommodate specific preferences (e.g. for night nurses, restaurants, etc.)? Do they need to be part of the provider network?
+</li>
+<li>
+How is this different from a Honeyfund or directly giving the money to my friend/new parent?
+</li>
+<li>
+Does my friend have the option to redirect my gift toward another service?
+</li>
+<li>
+Will I receive a notification when my friend uses the gift?
+</li>
+<li>
+Can my friend rate the gift/service/provider?
+</li>
+<li>
+I want to schedule a series of gifts over the next few months -- is there a recommended way to stagger my giving?
+</li>
+<li>
+Is there a giving "cap" that needs to be met for my friend to receive my gift (e.g. similar to Kickstarter)?
+</li>
+<li>
+Do these gifts expire?
+</li>
+</ul>
 </ion-content>
