About Page completed

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -19,4 +19,10 @@
 </ion-header>
 
 <ion-content padding>
+<h3 align="center">
+    A registry that gives moms full tummies, sleep, alone time, emotional support, mental health, and stress management.
+</h3>
+<h5 align="center">
+  Happy mommy, happy baby. Give the gift of health and happiness.
+</h5>
 </ion-content>
