added payment integration

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
         <!--  (click)="timemoney('time')"-->
         Spend Time
       </ion-segment-button>
-      <ion-segment-button value="money">
+      <ion-segment-button value="money" href="#" onclick="window.open('http://myvillagegifts.com/#/dash', '_system', 'location=yes'); return false;">
         Spend Money
       </ion-segment-button>
     </ion-segment>
