--- a/src/pages/moments/moments.html
+++ b/src/pages/moments/moments.html
@@ -5,17 +5,17 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar align-title="center">
-    <ion-buttons left>
-      <button ion-button menuToggle icon-only>
+  <ion-navbar align-title="center">
+    <!-- <ion-buttons left>
+       ion-button menuToggle icon-only>
         <ion-icon name='menu'></ion-icon>
       </button>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-title class="open-task">Moments</ion-title>
     <ion-buttons right>
       <img class="header-logo" src="assets/img/myVillageLogo.jpg">
     </ion-buttons>
-  </ion-toolbar>
+  </ion-navbar>
 </ion-header>
 
 <ion-content padding>
