Shorter text for creating new village checkbox

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -40,7 +40,7 @@
             </ion-item>
 
 	    <ion-item class="reg-field">
-	      <ion-label fixed class="reg-form-label">Create a new village? </ion-label>
+	      <ion-label fixed class="reg-form-label">New village? </ion-label>
 	      <ion-checkbox name="newVillage" [(ngModel)]="newVillageP"></ion-checkbox>
 	    </ion-item>
 	    
