fixed text of takeTask

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -59,7 +59,7 @@
           <div>
             <ion-item >
               <ion-label>
-                <h3 class="task_title">A week of Blue Apron</h3>
+                <h3 class="task_title">A Week of Blue Apron</h3>
                 <!<img src="assets/img/gourmet_meal.jpg">
                 <p>Gift a week of Blue Apron</p>
                 <!<img src="assets/img/raw+ingredients+groceries+cooking.jpg">
@@ -115,7 +115,7 @@
           <div>
             <ion-item >
               <ion-label>
-                <h3 class="task_title">Night nurse</h3>
+                <h3 class="task_title">Night Nurse</h3>
                 <!<img src="assets/img/gourmet_meal.jpg">
                 <p>Contribute toward a night nurse</p>
                 <!<img src="assets/img/Night+nurse.jpg">
@@ -129,7 +129,7 @@
           <div>
             <ion-item >
               <ion-label>
-                <h3 class="task_title">Spa day</h3>
+                <h3 class="task_title">Spa Day</h3>
                 <!<img src="assets/img/gourmet_meal.jpg">
                 <p>Contribute toward a spa day</p>
                 <!<img src="assets/img/love-romantic-bath-candlelight.jpg">
@@ -143,7 +143,7 @@
           <div>
             <ion-item >
               <ion-label>
-                <h3 class="task_title">Lactation consultant</h3>
+                <h3 class="task_title">Lactation Consultant</h3>
                 <!<img src="assets/img/gourmet_meal.jpg">
                 <p>Contribute toward a lactation consultant</p>
                 <!<img src="assets/img/lactation.jpg">
