changed fields pushed so that you can display date and time on the main feed

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,8 +30,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">{{task.name}}</h3>
-                <p>Time: {{task.clockTime}}</p>
-                <p>Description: {{task.category}}</p>
+                <p> Date: {{task.date}} </p>
+                <p> Time: {{task.time}} </p>
+                <p>Category: {{task.category}}</p>
               </ion-label>
             </ion-item>
           </div>
@@ -47,7 +48,7 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Gourmet Meal</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Gift a meal to their favorite restaurant</p>
                 <p>Price: from $55.00</p>
               </ion-label>
@@ -60,9 +61,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">A Week of Blue Apron</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Gift a week of Blue Apron</p>
-                <!<img src="assets/img/raw+ingredients+groceries+cooking.jpg">
+                <!-- <img src="assets/img/raw+ingredients+groceries+cooking.jpg"> -->
                 <p>Price: $65.00</p>
               </ion-label>
             </ion-item>
@@ -74,9 +75,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Virtual New Moms Group</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Sign up to join a Virtual New Moms Group (0-6 mo post pregnancy)</p>
-                <!<img src="assets/img/raw+ingredients+groceries+cooking.jpg">
+                <!-- <img src="assets/img/raw+ingredients+groceries+cooking.jpg"> -->
                 <p>Price: $160.00</p>
               </ion-label>
             </ion-item>
@@ -88,9 +89,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Cleaning Service</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a cleaning service</p>
-                <!<img src="assets/img/StockSnap_VF51PE5SCF.jpg">
+                <!-- <img src="assets/img/StockSnap_VF51PE5SCF.jpg"> -->
                 <p>Price: from $55.00</p>
               </ion-label>
             </ion-item>
@@ -102,9 +103,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Babysitter</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a babysitter</p>
-                <!<img src="assets/img/Babysitter.jpg">
+                <!-- <img src="assets/img/Babysitter.jpg"> -->
                 <p>Price: from $55.00</p>
               </ion-label>
             </ion-item>
@@ -116,9 +117,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Night Nurse</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a night nurse</p>
-                <!<img src="assets/img/Night+nurse.jpg">
+                <!-- <img src="assets/img/Night+nurse.jpg"> -->
                 <p>Price: from $55.00</p>
               </ion-label>
             </ion-item>
@@ -130,9 +131,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Spa Day</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a spa day</p>
-                <!<img src="assets/img/love-romantic-bath-candlelight.jpg">
+                <!-- <img src="assets/img/love-romantic-bath-candlelight.jpg"> -->
                 <p>Price: from $55.00</p>
               </ion-label>
             </ion-item>
@@ -144,9 +145,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Lactation Consultant</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Contribute toward a lactation consultant</p>
-                <!<img src="assets/img/lactation.jpg">
+                <!-- <img src="assets/img/lactation.jpg"> -->
                 <p>Price: from $105.00</p>
               </ion-label>
             </ion-item>
@@ -158,9 +159,9 @@
             <ion-item >
               <ion-label>
                 <h3 class="task_title">Mommy Care Package</h3>
-                <!<img src="assets/img/gourmet_meal.jpg">
+                <!-- <img src="assets/img/gourmet_meal.jpg"> -->
                 <p>Mommy Care Package: Pain Relief and Pick-Me-Up Kit</p>
-                <!<img src="assets/img/fresh+aroma+therapy.jpg">
+                <!-- <img src="assets/img/fresh+aroma+therapy.jpg"> -->
                 <p>Price: $50.00</p>
               </ion-label>
             </ion-item>
