--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -52,7 +52,7 @@
         <button ion-item (click)="taskTapped(task)" *ngIf="task.taken == taken || taken == 2"> <!-- do not remove *ngIf without first consulting GitIssue #18-->
           <h3>{{task.name}}</h3>
           <p>
-            Time: {{task.clockTime}}
+            {{task.time}}
           </p>
         </button>
       </ion-item-sliding>
